--- a/talismane_core/languagePacks/englishLanguagePack/languagePack.properties
+++ b/talismane_core/languagePacks/englishLanguagePack/languagePack.properties
@@ -1,8 +1,8 @@
 locale=en
 transitionSystem=pennDependencyLabels.txt
 posTagSet=pennTagset.txt
-textFilters=text_marker_filters.txt
-tokenFilters=token_filters.txt
+textFilters=replace:text_marker_filters.txt
+tokenFilters=replace:token_filters.txt
 sentenceModel=sentence_penn_train_baseline_maxent_cut5.zip
 tokeniserModel=tokeniser_penn_train_baseline_maxent_cut5.zip
 posTaggerModel=posTagger_penn_train_baseline_maxent_cut5.zip
