--- a/talismane_core/languagePacks/frenchLanguagePack/languagePack.properties
+++ b/talismane_core/languagePacks/frenchLanguagePack/languagePack.properties
@@ -1,8 +1,8 @@
 locale=fr
 transitionSystem=talismaneDependencyLabels.txt
 posTagSet=talismaneTagset.txt
-textFilters=text_marker_filters.txt
-tokenFilters=token_filters.txt
+textFilters=replace:text_marker_filters.txt
+tokenFilters=replace:token_filters.txt
 posTaggerRules=posTaggerConstraints_fr.txt
 sentenceModel=ftbAll_SentenceDetector_baseline1.zip
 tokeniserModel=ftbAll_tokeniser_baseline2_cutoff3.zip
