--- a/talismane_core/languagePacks/englishLanguagePack/languagePack.properties
+++ b/talismane_core/languagePacks/englishLanguagePack/languagePack.properties
@@ -3,6 +3,7 @@ transitionSystem=pennDependencyLabels.txt
 posTagSet=pennTagset.txt
 textFilters=replace:text_marker_filters.txt
 tokenFilters=replace:token_filters.txt
+tokenSequenceFilters=replace:token_sequence_filters.txt
 sentenceModel=sentence_penn_train_baseline_maxent_cut5.zip
 tokeniserModel=tokeniser_penn_train_baseline_maxent_cut5.zip
 posTaggerModel=posTagger_penn_train_baseline_maxent_cut5.zip
