--- a/talismane_core/languagePacks/frenchLanguagePack/languagePack.properties
+++ b/talismane_core/languagePacks/frenchLanguagePack/languagePack.properties
@@ -10,3 +10,4 @@ posTaggerModel=postag_spmrl_all_train_maxent_i200_cut10_v3.zip
 parserModel=parser_spmrl_all_maxent_i200_cutoff7_v3.zip
 lexicon=lexicons_fr.zip
 corpusLexiconEntryRegex=talismane_conll_morph_regex.txt
+lowercasePreferences=lowercasePreferences.txt
