--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,13 @@ talismane_core/languagePacks/englishLanguagePack/*.zip
 talismane_core/languagePacks/frenchLanguagePack/*.zip
 .settings
 .project
+talismane_core/target/
+talismane_en/target/
+talismane_examples/target/
+talismane_extensions/target/
+talismane_fr/target/
+talismane_ftb/target/
+talismane_machine_learning/target/
+talismane_term_extractor/target/
+talismane_term_viewer/target/
+talismane_utils/target/
