--- a/talismane_core/pom.xml
+++ b/talismane_core/pom.xml
@@ -11,6 +11,21 @@
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<testSourceDirectory>srcTest</testSourceDirectory>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>com.joliciel.talismane.TalismaneMain</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 	<dependencies>
 		<dependency>
@@ -26,7 +41,7 @@
 			<artifactId>freemarker</artifactId>
 		</dependency>
 		<dependency>
-		    <!-- Must be before junit! -->
+			<!-- Must be before junit! -->
 			<groupId>com.googlecode.jmockit</groupId>
 			<artifactId>jmockit</artifactId>
 			<scope>test</scope>
