--- a/talismane_term_extractor/pom.xml
+++ b/talismane_term_extractor/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.joliciel.talismane</groupId>
 		<artifactId>talismane-parent</artifactId>
-		<version>2.4.9b</version>
+		<version>2.4.10b</version>
 		<relativePath>../talismane_parent</relativePath>
 	</parent>
 	<build>
@@ -19,6 +19,21 @@
 				</excludes>
 			</testResource>
 		</testResources>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>com.joliciel.talismane.terminology.TalismaneTermExtractorMain</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 	<dependencies>
 		<dependency>
