--- a/talismane_core/pom.xml
+++ b/talismane_core/pom.xml
@@ -38,8 +38,9 @@
 					</execution>
 				</executions>
 				<configuration>
-					<additionalparam>-Xdoclint:syntax -Xdoclint:accessibility -Xdoclint:reference</additionalparam>
-				</configuration> 
+					<additionalparam>-Xdoclint:syntax -Xdoclint:accessibility
+						-Xdoclint:reference</additionalparam>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -53,6 +54,20 @@
 						</manifest>
 					</archive>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
