Fixed dependencies, resource loading errors, and sql errors in talismane_term_extractor Replaced Windows newlines with Unix newlines Removed libTerminology, as no longer required under Maven

--- a/talismane_term_viewer/conf/talismane_terminology_viewer.ini
+++ b/talismane_term_viewer/conf/talismane_terminology_viewer.ini
@@ -1,6 +1,6 @@
 editor=C:\Program Files\Notepad++\notepad++.exe
 arguments=-n%line -c%column %file 
-jdbc.url=jdbc:postgresql://localhost:5433/terms3?charSet=UTF-8
+jdbc.url=jdbc:postgresql://localhost:5432/terms?charSet=UTF-8
 jdbc.username=nlp
 jdbc.password=nlp
 project.code=gyroTest
