Change classpath resource paths, as relative paths are breaking on Oracle Java 8 on Linux Remove remaining JARs from lib Remove warnings and Java 8 deprecated classes from JavaFX app

--- a/talismane_ftb/pom.xml
+++ b/talismane_ftb/pom.xml
@@ -79,6 +79,11 @@
 			<artifactId>xercesImpl</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.googlecode.jmockit</groupId>
+			<artifactId>jmockit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
@@ -86,6 +91,10 @@
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 		</dependency>
 	</dependencies>
 </project>
