--- a/talismane_examples/pom.xml
+++ b/talismane_examples/pom.xml
@@ -73,7 +73,7 @@
 	<parent>
 		<groupId>com.joliciel.talismane</groupId>
 		<artifactId>talismane-parent</artifactId>
-		<version>2.5.0b</version>
+		<version>2.6.0b-SNAPSHOT</version>
 		<relativePath>../talismane_parent</relativePath>
 	</parent>
 	<dependencies>
