--- a/talismane_en/pom.xml
+++ b/talismane_en/pom.xml
@@ -73,13 +73,17 @@
 	<parent>
 		<groupId>com.joliciel.talismane</groupId>
 		<artifactId>talismane-parent</artifactId>
-		<version>2.6.1b-SNAPSHOT</version>
+		<version>2.6.2b-SNAPSHOT</version>
 		<relativePath>../talismane_parent</relativePath>
 	</parent>
 	<dependencies>
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.joliciel.talismane</groupId>
