--- a/talismane_extensions/pom.xml
+++ b/talismane_extensions/pom.xml
@@ -73,7 +73,7 @@
 	<parent>
 		<groupId>com.joliciel.talismane</groupId>
 		<artifactId>talismane-parent</artifactId>
-		<version>2.6.1b-SNAPSHOT</version>
+		<version>2.6.2b-SNAPSHOT</version>
 		<relativePath>../talismane_parent</relativePath>
 	</parent>
 	<dependencies>
@@ -92,6 +92,10 @@
 		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
 		</dependency>
 	</dependencies>
 </project>
