--- a/talismane_machine_learning/pom.xml
+++ b/talismane_machine_learning/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.joliciel.talismane</groupId>
 		<artifactId>talismane-parent</artifactId>
-		<version>2.6.1b-SNAPSHOT</version>
+		<version>2.6.2b-SNAPSHOT</version>
 		<relativePath>../talismane_parent</relativePath>
 	</parent>
 	<build>
@@ -97,6 +97,10 @@
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
 		</dependency>
 	</dependencies>
 </project>
