--- a/talismane_term_extractor/pom.xml
+++ b/talismane_term_extractor/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.joliciel.talismane</groupId>
 		<artifactId>talismane-parent</artifactId>
-		<version>2.6.1b-SNAPSHOT</version>
+		<version>2.6.2b-SNAPSHOT</version>
 		<relativePath>../talismane_parent</relativePath>
 	</parent>
 	<build>
@@ -106,6 +106,10 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
 		</dependency>
 	</dependencies>
 </project>
