Add custom regular expression engine
This custom engine takes a virtual machine approcah, by compiling the
regular expressions into threaded bytecode instructions. This
compilation phase aims to make it possible store compiled expressions
and reload them later, making it faster to run them. Moreover, all
alternatives are tried concurrently, avoiding to go through the text
multiple times.

--- a/talismane_core/src/main/resources/reference.conf
+++ b/talismane_core/src/main/resources/reference.conf
@@ -99,6 +99,8 @@ talismane {
 			# - Impose pos-tags on a particular word
 			# - Add arbitrary tags to the text, which are inherited by the tokens and handled by downstream systems
 			sentence-annotators = []
+			
+			compiled-token-filters = []
 		}
 		
 		analysis {
