--- a/talismane_machine_learning/pom.xml
+++ b/talismane_machine_learning/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.joliciel.talismane</groupId>
 		<artifactId>talismane-parent</artifactId>
-		<version>2.6.7b-SNAPSHOT</version>
+		<version>2.6.0b</version>
 		<relativePath>../talismane_parent</relativePath>
 	</parent>
 	<build>
