Midway commit for completely dysfunctional code, simply to keep it somewhere

--- a/talismane_machine_learning/pom.xml
+++ b/talismane_machine_learning/pom.xml
@@ -98,5 +98,9 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.typesafe</groupId>
+			<artifactId>config</artifactId>
+		</dependency>
 	</dependencies>
 </project>
