--- a/talismane_parent/pom.xml
+++ b/talismane_parent/pom.xml
@@ -189,7 +189,11 @@
 				<artifactId>xercesImpl</artifactId>
 				<version>2.9.1</version>
 			</dependency>
-
+			<dependency>
+				<groupId>com.typesafe</groupId>
+				<artifactId>config</artifactId>
+				<version>1.3.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<name>Talismane</name>
